K8S-DEMO/webapp-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: webapp-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  tls:
    - hosts:
        - frontendtest.com
      secretName: webapp-tls-secret
  rules:
    - host: frontendtest.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: webapp-service
                port:
                  number: 5000

#  生成tls.crt和tls.keyz作为certificates                 
# openssl req -x509 -newkey rsa:4096 -sha256 -nodes -keyout tls.key -out tls.crt -subj "/CN=frontendtest.com" -days 365

# 域名加入主机的hosts文件
# echo "$(minikube ip)frontendtest.com" | sudo tee -a /etc/hosts

# 创建secret
# kubectl create secret tls webapp-tls-secret --cert=tls.crt --key=tls.key

# 由于minikube运行在docker里面，与主机的端口是隔离的，所以需要在minikube里面访问，因此即使ingress部署成功之后也无法在主机上直接通过域名访问，部署到云端的时候不会存在这个问题
# 下面这段代码可以直接将localhost的请求转发到minikube里面，直接访问服务
# kubectl port-forward webapp-deployment-5d66cd79d9-c8nbv 5000:5000
